--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -300,6 +300,8 @@
                 <div class="toolbar-section">
                     <h4>Appearance</h4>
                     <label for="objFill">Fill Color:</label> <input type="color" id="objFill" class="sidebar-input" value="#ff0000"><br>
+                    <input type="checkbox" id="objFillTransparent" class="sidebar-input" style="width: auto; margin-left: 0; vertical-align: middle;">
+                    <label for="objFillTransparent" class="checkbox-label" style="width: auto; margin-left: 5px;">Transparent Fill</label><br>
                     <label for="objStrokeColor">Stroke Color:</label> <input type="color" id="objStrokeColor" class="sidebar-input" value="#000000"><br>
                     <label for="objStrokeWidth">Stroke Width:</label> <input type="number" id="objStrokeWidth" min="0" class="sidebar-input" value="1"><br>
                     <label for="objOpacity">Opacity:</label> <input type="range" id="objOpacity" min="0" max="1" step="0.01" class="sidebar-input" value="1.0">
