--- a/Client/Viewer/Viewer_JS.html
+++ b/Client/Viewer/Viewer_JS.html
@@ -342,60 +342,52 @@
             console.error("Invalid slide index:", slideIndex); return;
         }
 
+        // --- Cleanup Previous Slide Media FIRST ---
         stopAndDestroyYouTubePlayer();
         stopAndClearAudioPlayer();
-        hideSpotlightSVG();
+        // Also remove any lingering spotlight effect from previous slide
+        hideSpotlightSVG(); // Ensure spotlight is cleared when changing slides
 
-        viewerApp.state.currentSlideIndex = slideIndex;
+
+        viewerApp.state.currentSlideIndex = slideIndex; // Update state *before* using it
         const slideData = slides[slideIndex];
         const canvas = viewerApp.state.viewerFabricCanvas;
 
+        // Ensure slideMedia exists
          if (!slideData.slideMedia) {
             slideData.slideMedia = { type: null, url: null, driveFileId: null, mimeType: null, originalName: null };
          }
 
+        // Set canvas dimensions and container dimensions
         const slideWidth = slideData.canvasWidth || viewerApp.state.defaultCanvasWidth;
         const slideHeight = slideData.canvasHeight || viewerApp.state.defaultCanvasHeight;
         const media = slideData.slideMedia;
         let mediaType = (media && media.type) ? media.type : 'none';
 
+        // Set canvas element size regardless of media type now
         canvas.setWidth(slideWidth);
         canvas.setHeight(slideHeight);
-
-        if (typeof canvas.set === 'function') {
-            try {
-                canvas.set({ willReadFrequently: true });
-                 // console.log("Set canvas.willReadFrequently = true");
-            } catch (wfError) {
-                console.warn("Could not set canvas.willReadFrequently directly on Fabric.Canvas instance.", wfError);
-                if (viewerFabricCanvasEl) {
-                    viewerFabricCanvasEl.getContext('2d', { willReadFrequently: true });
-                }
-            }
-        } else if (viewerFabricCanvasEl) {
-            viewerFabricCanvasEl.getContext('2d', { willReadFrequently: true });
-        }
-        if (canvas.lowerCanvasEl && canvas.lowerCanvasEl.getContext) canvas.lowerCanvasEl.getContext('2d').willReadFrequently = true;
-        if (canvas.upperCanvasEl && canvas.upperCanvasEl.getContext) canvas.upperCanvasEl.getContext('2d').willReadFrequently = true;
-
         if (viewerFabricCanvasEl) {
             viewerFabricCanvasEl.width = slideWidth;
             viewerFabricCanvasEl.height = slideHeight;
         }
+        // Adjust media container size
         if (viewerMediaContainerEl) {
             viewerMediaContainerEl.style.width = slideWidth + 'px';
             viewerMediaContainerEl.style.height = slideHeight + 'px';
         }
 
+        // Clear canvas objects and background image
         canvas.clear();
         canvas.setBackgroundImage(null, () => { canvas.renderAll(); });
         canvas.backgroundColor = 'transparent';
 
+        // Hide/show containers based on media type
         if (youtubePlayerContainerEl) youtubePlayerContainerEl.style.display = (mediaType === 'youtube') ? 'block' : 'none';
-        if (viewerCanvasContainerEl) viewerCanvasContainerEl.style.display = (mediaType === 'youtube') ? 'none' : 'flex';
-        if (viewerAudioPlayerEl) viewerAudioPlayerEl.style.display = 'none';
+        if (viewerCanvasContainerEl) viewerCanvasContainerEl.style.display = (mediaType === 'youtube') ? 'none' : 'flex'; // Show unless YT
+        if (viewerAudioPlayerEl) viewerAudioPlayerEl.style.display = 'none'; // Hide audio initially
 
-        // console.log(`Rendering slide ${slideIndex + 1}, media type: ${mediaType}`);
+        console.log(`Rendering slide ${slideIndex + 1}, media type: ${mediaType}`);
 
         switch(mediaType) {
             case 'image':
@@ -407,29 +399,42 @@
                         });
                     }, { crossOrigin: 'anonymous' });
                 } else {
+                     console.warn("Image media present but URL is missing or not base64:", media.url);
                      canvas.backgroundColor = '#e9e9e9';
                      canvas.renderAll();
                 }
                 break;
+
             case 'youtube':
                 if (media.url) {
                     const videoId = extractYouTubeVideoId(media.url);
                     if (videoId) {
-                        if (isYouTubeApiReady) setupYouTubePlayer(videoId);
-                        else console.warn("YouTube API not ready yet when trying to render slide.");
+                        // Canvas container is already hidden
+                        if (isYouTubeApiReady) {
+                             setupYouTubePlayer(videoId);
+                        } else {
+                             console.warn("YouTube API not ready yet when trying to render slide.");
+                        }
+                         // No canvas background setting needed
                     } else {
+                        console.error("Could not extract YouTube Video ID from URL:", media.url);
+                         // Show canvas container with error BG if YT fails
                          if (viewerCanvasContainerEl) viewerCanvasContainerEl.style.display = 'flex';
                          canvas.backgroundColor = '#555';
                          canvas.renderAll();
                     }
                 } else {
-                      if (viewerCanvasContainerEl) viewerCanvasContainerEl.style.display = 'flex';
+                     console.warn("YouTube media type set but URL is missing.");
+                      if (viewerCanvasContainerEl) viewerCanvasContainerEl.style.display = 'flex'; // Show canvas
                      canvas.backgroundColor = '#e9e9e9';
                      canvas.renderAll();
                 }
                 break;
+
             case 'audio':
+                 // Canvas container is already visible
                  if (media.driveFileId) {
+                     console.log("Audio media needs fetch from Drive ID:", media.driveFileId);
                      showLoadingViewer(true);
                      google.script.run
                          .withSuccessHandler(function(audioResponse) {
@@ -441,6 +446,7 @@
                                  canvas.backgroundColor = '#e0e0e0';
                                  canvas.renderAll();
                              } else {
+                                 console.error("Failed to fetch audio base64 data:", audioResponse);
                                  onServerErrorViewer(audioResponse || {error: "Failed to load audio data."});
                                  canvas.backgroundColor = '#e9e9e9';
                                  canvas.renderAll();
@@ -454,105 +460,82 @@
                          })
                          .getAudioAsBase64(media.driveFileId);
                  } else {
+                     console.warn("Audio media type set but driveFileId is missing.");
                      canvas.backgroundColor = '#e9e9e9';
                      canvas.renderAll();
                  }
                  break;
-            default:
+
+            default: // 'none' or unknown
+                 // Canvas container is already visible
                  canvas.backgroundColor = '#e9e9e9';
                  canvas.renderAll();
                  break;
         }
 
+        // Load Fabric objects (overlays) ONLY if canvas container is visible
         if (viewerCanvasContainerEl && viewerCanvasContainerEl.style.display !== 'none' && slideData.fabricCanvasJSON) {
             canvas.loadFromJSON(slideData.fabricCanvasJSON, function() {
-                if (viewerApp.state.currentSlideIndex !== slideIndex) {
-                    return;
-                }
+                if (viewerApp.state.currentSlideIndex !== slideIndex) return;
 
                 canvas.forEachObject(function(obj) {
                     obj.selectable = false;
-                    obj.evented = true; 
+                    obj.evented = true; // Canvas container is visible, so events should work
                     obj.hoverCursor = 'pointer';
                     obj._clickAndHoldTimer = null;
-                    obj.perPixelTargetFind = true; 
-                    
-                    // Store the original opacity for hover-reveal to revert to
-                    // This ensures if admin set 0.01, it reverts to 0.01, not 0
-                    obj.originalOpacityForReveal = obj.opacity; 
 
-                    obj.off(); 
+                    obj.off('mousedown');
+                    obj.off('mouseup');
+                    obj.off('mouseout');
+                    obj.off('mousemove'); // Usually not needed to cancel hold unless specific logic
+                    obj.off('mouseover');
 
+                    // Attach interaction listeners
                     if (obj.customInteraction && obj.customInteraction.trigger) {
                         const trigger = obj.customInteraction.trigger;
-                        const action = obj.customInteraction.action;
 
-                        if (trigger === 'hover') {
-                            if (action === 'spotlight') {
-                                obj.on('mouseover', function(options) {
-                                    if (this && this.customInteraction && this.customInteraction.action === 'spotlight') {
-                                        // console.log("Hover-Spotlight: mouseover on", this.type);
-                                        showSpotlightSVG(this, this.customInteraction);
+                        if (trigger === 'click') {
+                            obj.on('mousedown', function(options) {
+                                // Ensure this specific mousedown is for a 'click' trigger
+                                if (this.customInteraction && this.customInteraction.trigger === 'click') {
+                                    // If a click-and-hold timer was somehow pending for this object, clear it.
+                                    if (this._clickAndHoldTimer) {
+                                        clearTimeout(this._clickAndHoldTimer);
+                                        this._clickAndHoldTimer = null;
+                                        console.log("ClickAndHold: Timer cleared by click for", this.type);
                                     }
-                                });
-                                obj.on('mouseout', function(options) {
-                                    if (this && this.customInteraction && this.customInteraction.action === 'spotlight') {
-                                        // console.log("Hover-Spotlight: mouseout on", this.type);
-                                        if (viewerApp.state.isSpotlightActive && viewerApp.state.currentSpotlightInfo && viewerApp.state.currentSpotlightInfo.targetFabricObject === this) {
-                                            hideSpotlightSVG();
-                                        } else if (!viewerApp.state.isSpotlightActive){
-                                            hideSpotlightSVG(); 
-                                        }
-                                    }
-                                });
-                            } else if (action === 'reveal') {
-                                // console.log(`Attaching HOVER-REVEAL listeners to ${obj.type} (ID: ${obj.id || 'N/A'}, Initial Opacity: ${obj.originalOpacityForReveal})`);
-                                obj.on('mouseover', function(options) {
-                                    if (this && this.customInteraction && this.customInteraction.action === 'reveal') {
-                                        // console.log('Hover-Reveal: mouseover on', this.type, 'current opacity:', this.opacity);
-                                        this.animate('opacity', 1, { duration: 250, onChange: canvas.renderAll.bind(canvas) });
-                                    }
-                                });
-                                obj.on('mouseout', function(options) {
-                                     if (this && this.customInteraction && this.customInteraction.action === 'reveal') {
-                                        // console.log('Hover-Reveal: mouseout on', this.type, 'reverting to:', this.originalOpacityForReveal);
-                                        this.animate('opacity', this.originalOpacityForReveal, { duration: 250, onChange: canvas.renderAll.bind(canvas) });
-                                    }
-                                });
-                            } else { 
-                                obj.on('mouseover', function(options) {
-                                     if (this && this.customInteraction && this.customInteraction.trigger === 'hover') {
-                                        // console.log('Generic Hover: mouseover on', this.type, "Action:", this.customInteraction.action);
-                                        handleOverlayInteraction(this, 'hover');
-                                    }
-                                });
-                            }
-                        } else if (trigger === 'click') {
-                             obj.on('mousedown', function(options) {
-                                if (this && this.customInteraction && this.customInteraction.trigger === 'click') {
-                                    if (this._clickAndHoldTimer) { clearTimeout(this._clickAndHoldTimer); this._clickAndHoldTimer = null; }
-                                    // console.log('Click: mousedown on', this.type, "Action:", this.customInteraction.action);
-                                    handleOverlayInteraction(this, 'click'); 
+                                    handleOverlayInteraction(this, 'click'); // 'click' is the eventType
                                     if(options.e) options.e.stopPropagation();
                                 }
                             });
-                        } else if (trigger === 'clickAndHold') {
-                            obj.on('mousedown', function(options) {
-                                if (this && this.customInteraction && this.customInteraction.trigger === 'clickAndHold') {
-                                    // console.log("ClickAndHold: mousedown on", this.type, "Action:", this.customInteraction.action);
-                                    if (this._clickAndHoldTimer) clearTimeout(this._clickAndHoldTimer);
-                                    this._clickAndHoldTimer = setTimeout(() => {
-                                        if (this && this.customInteraction) { 
-                                        //    console.log("ClickAndHold: Timer fired for", this.type);
-                                           handleOverlayInteraction(this, 'clickAndHold');
-                                        }
-                                        this._clickAndHoldTimer = null; 
-                                    }, CLICK_AND_HOLD_DURATION);
+                        } else if (trigger === 'hover') {
+                             obj.on('mouseover', function() {
+                                if (this.customInteraction && this.customInteraction.trigger === 'hover') {
+                                    handleOverlayInteraction(this, 'hover');
                                 }
                             });
+                            // Note: You might want a 'mouseout' handler here if hover needs to be undone
+                        } else if (trigger === 'clickAndHold') {
+                            obj.on('mousedown', function(options) {
+                                // This specific 'this' is the Fabric object
+                                console.log("ClickAndHold: mousedown on", this.type, this);
+                                // Clear any existing timer *for this object*
+                                if (this._clickAndHoldTimer) clearTimeout(this._clickAndHoldTimer);
+
+                                this._clickAndHoldTimer = setTimeout(() => {
+                                    console.log("ClickAndHold: Timer fired for", this.type, this);
+                                    // Ensure the event is marked as 'clickAndHold' for handleOverlayInteraction
+                                    handleOverlayInteraction(this, 'clickAndHold');
+                                    this._clickAndHoldTimer = null; // Reset timer after firing
+                                }, CLICK_AND_HOLD_DURATION);
+
+                                // Do not stop propagation here, allow other mousedown listeners if any
+                                // (though typically, one trigger per object is best)
+                            });
+
                             const cancelHold = function() {
-                                if (this && this._clickAndHoldTimer) {
-                                    // console.log("ClickAndHold: Cancelling for", this.type);
+                                if (this._clickAndHoldTimer) {
+                                    console.log("ClickAndHold: Cancelling hold due to mouseup/mouseout for", this.type, this);
                                     clearTimeout(this._clickAndHoldTimer);
                                     this._clickAndHoldTimer = null;
                                 }
@@ -560,28 +543,19 @@
                             obj.on('mouseup', cancelHold);
                             obj.on('mouseout', cancelHold);
                         }
-                    } 
-                }); 
-
-                canvas.requestRenderAll(); 
-                // console.log("loadFromJSON callback completed. Canvas objects processed and rendered.");
-
-            }, function(o, object) {
-                if (object) { 
-                    object.selectable = false;
-                    object.evented = true;
-                    object.hoverCursor = 'pointer';
-                    object.perPixelTargetFind = true;
-                }
-            }); 
+                    }
+                });
+                canvas.renderAll();
+            });
         } else if (viewerCanvasContainerEl && viewerCanvasContainerEl.style.display !== 'none') {
-             if(mediaType !== 'image' && mediaType !== 'audio') { 
+             // Render canvas background if no JSON but canvas is visible
+             if(mediaType !== 'image' && mediaType !== 'audio') { // Avoid redundant render
                  canvas.renderAll();
              }
         }
-        updateSlideNavigationUI(); 
+        updateSlideNavigationUI(); // Update nav AFTER potential async operations
     }
-    
+
     // --- Interaction & Modal Handling ---
     function handleOverlayInteraction(fabricObject, eventType) {
         if (!fabricObject.customInteraction) return;
